# TravelAgent-Graph

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: api.py  auth.py  chatbot.py  travel.py
backend/app/core/: config.py  limiter.py  logging.py  middleware.py
backend/app/core/langgraph/: graph.py
backend/app/core/langgraph/agents/sub_agents/: __init__.py  attraction_sub_agent.py  hotel_sub_agent.py  rag_sub_agent.py  selection_sub_agent.py  weather_sub_agent.py
backend/app/core/langgraph/agents/travel_plan_agent/: __init__.py  graph.py  node.py  travel_memory.py
backend/app/core/langgraph/rag/: __init__.py  pipeline.py  rag_tool.py
backend/app/core/langgraph/tools/: __init__.py
backend/app/core/prompts/: __init__.py  attraction.py  hotel.py  system.md  travel.py  weather.py
backend/app/models/: __init__.py  base.py  session.py  user.py
backend/app/schemas/: __init__.py  auth.py  chat.py
backend/app/schemas/agent/: __init__.py  context.py  state.py  travel_state.py
backend/app/schemas/common/: location.py
backend/app/schemas/travel/: __init__.py  components.py  plan.py  request.py  selection.py
backend/app/schemas/v0/: graph.py  tools.py  travel.py  travel_state.py  weather.py
backend/app/schemas/weather/: __init__.py  amap.py  qweather.py
backend/app/services/: database.py  llm.py
backend/app/utils/: __init__.py  auth.py  graph.py  sanitization.py
frontend/: .env.example  Dockerfile  index.html  (+3 more)
(+47 files in other folders)
